<resources>
    <string name="app_name">Acgnu+</string>
    <string name="setting">保护设置</string>
    <string name="storage_setting">存储设置</string>
    <string name="set_storage_path">设置路径</string>
    <string name="storage_open">启用</string>
    <string name="pref_open">启用MSG保护</string>
    <string name="pref_pvp_open">启用PVP保护</string>
    <string name="pref_pvp_mask">启用PVP遮罩</string>
    <string name="target">目标</string>
    <string name="target_hint">目标UIN</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="unpoint">未指定</string>
    <string name="cus_path_hint">根目录文件夹名</string>
    <string name="reset_path">重置路径</string>
    <string name="import_setting">导入配置</string>
    <string name="export_setting">导出配置</string>
    <string name="loading">正在加载...</string>
    <string name="no_import_data">没有可导入的数据</string>
    <string name="empty_import_data">可导入的数据为空</string>
    <string name="import_success">导入成功</string>
    <string name="export_success">导出成功</string>
    <string name="oplus_passcode">O+通行码</string>
</resources>
