<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting">
        <SwitchPreference
                android:defaultValue="false"
                android:key="pvpopen"
                android:title="@string/pref_pvp_open" />
        <SwitchPreference
                android:defaultValue="false"
                android:key="pvpmask"
                android:title="@string/pref_pvp_mask" />
        <SwitchPreference
                android:defaultValue="false"
                android:key="open"
                android:title="@string/pref_open"/>
        <EditTextPreference
                android:dependency="open"
                android:hint="@string/target_hint"
                android:key="target"
                android:title="@string/target"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/storage_setting">
        <SwitchPreference
                android:defaultValue="false"
                android:key="storageopen"
                android:title="@string/storage_open"/>
        <PreferenceScreen
                android:title="@string/storage_setting"
                android:summary="">
            <intent android:action="org.acgnu.activity.applist"  />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="其他">
        <PreferenceScreen
                android:title="显示通行码"
                android:key="show_oplus_passcode"
                android:summary="">
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
